--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <body>
     <p id='server-time'></p>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
-      var HOST = location.origin.replace(/^http/, 'ws')
-      var ws = new WebSocket(HOST);
+      var socket = io();
       var el = document.getElementById('server-time');
-      ws.onmessage = function (event) {
-        el.innerHTML = 'Server time: ' + event.data;
-      };
+      socket.on('time', function(timeString) {
+        el.innerHTML = 'Server time: ' + timeString;
+      });
     </script>
   </body>
 </html>
